# RealTimeRenderingEngine

./: .gitignore  CMakeLists.txt  LICENSE
include/: Camera.h  Component.h  DisplayComponent.h  Drawable.h  FileUtils.h  InputComponent.h  Light.h  Material.h  MathUtils.h  Mesh.h  Model.h  Quad.h  RTREngine.h  RenderComponent.h  Scene.h  SceneComponent.h  Shader.h  ShadowMap.h  Texture.h  WindowCallback.h
resources/shaders/: BlinnPhong.frag  BlinnPhong.vert  BlinnPhong_Pure.frag  BlinnPhong_Pure.vert  DebugDraw.frag  DebugDraw.vert  Floor.frag  Marry.frag  Marry.vert  ShadowMap.vert
scene/: Marry.json  test.json  test1.json
src/: Camera.cpp  DisplayComponent.cpp  Drawable.cpp  InputComponent.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  Quad.cpp  RTREngine.cpp  RenderComponent.cpp  Scene.cpp  SceneComponent.cpp  Shader.cpp  ShadowMap.cpp  Texture.cpp  main.cpp
